@@ -9,9 +9,10 @@ tasks.whenTaskAdded { task ->
 apply plugin: 'java'
 apply plugin: 'application'
 
-// JDK 8
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 mainClassName = 'edu.mcw.rgd.pipelines.pharmgkb.Manager'
 String myAppName = 'pharmgkb-pipeline'
 
@@ -22,15 +23,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.9.0'
+    implementation ('org.apache.commons:commons-dbcp2:2.10.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'commons-net:commons-net:3.10.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.6.7.5'
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
-    implementation 'org.springframework:spring-beans:5.3.0'
-    implementation 'org.springframework:spring-jdbc:5.3.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.9.7'
+    implementation 'org.apache.logging.log4j:log4j-core:2.21.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.3'
+
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
