@@ -1,3 +1,6 @@
+Apr 17, 2024
+  fixed matching by HGNC ID
+
 Apr 17, 2023
 Feb 20, 2023
   updated jar dependencies
